Pricing buttons popups working and sending emails, fixes spacing in value section

--- a/main.css
+++ b/main.css
@@ -298,6 +298,13 @@ body{
   line-height: 29px;
   font-weight: var(--regular);
 }
+.values-firstdivider{
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: var(--line-color);
+  margin: 60px auto 30px;
+}
 .values-divider{
   display: block;
   width: 100%;
